Fix mouse scroll issue in folder

Changes:
Make apps grid view in folder handles all scroll event if folder is
opened to avoid closing app launcher via scrolling up in 1st page of
folder.

Bug: 847800
Change-Id: I5ec3744686202d519b421044d810857a3a5020d5
Reviewed-on: https://chromium-review.googlesource.com/1088148
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565052}
Former-commit-id: a107ca18d9374ea252fcc8e9e5266c9687d620ba